--- a/posts/8.mdx
+++ b/posts/8.mdx
@@ -1,6 +1,7 @@
 ---
-title: Marketing
+title: Contact
 description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
 date: May 8 2021
-logo: Marketing
+logo: Contact
 ---
+test
