--- a/posts/1.mdx
+++ b/posts/1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Design
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
+description: "I specialize in creating visually appealing and functional designs that effectively communicate brand messages across digital and print platforms. My expertise spans from developing innovative logos to executing comprehensive branding strategies. Each project in my portfolio demonstrates my ability to transform client visions into impactful, memorable design solutions that resonate with target audiences."
 date: May 8 2021
 logo: Design
 ---
