--- a/posts/2.mdx
+++ b/posts/2.mdx
@@ -1,6 +1,6 @@
 ---
-title: Marketing
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
+title: Development
+description: "As a seasoned developer, I have a robust track record of creating scalable, high-performance software solutions tailored to meet specific business needs. My technical proficiency encompasses the latest programming languages and frameworks, enabling me to deliver everything from user-friendly websites to complex enterprise systems. My approach emphasizes security, reliability, and forward-thinking solutions to drive technological advancement."
 date: May 8 2021
 logo: Marketing
 ---
