--- a/posts/8.mdx
+++ b/posts/8.mdx
@@ -1,6 +1,6 @@
 ---
 title: Contact
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
+description: "I am readily available for potential opportunities and collaborations that leverage my extensive skill set in design, marketing, development, and consulting. My contact details are provided for ease of communication, ensuring that I am accessible to prospective employers, collaborators, and clients interested in discussing projects or professional engagements."
 date: May 8 2021
 logo: Contact
 ---
