--- a/posts/7.mdx
+++ b/posts/7.mdx
@@ -1,6 +1,6 @@
 ---
-title: Linkedin
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
+title: Resume
+description: "My resume details a comprehensive professional journey characterized by continuous growth and significant achievements in the tech industry. It outlines my educational background, key skills, and career milestones, providing evidence of my ability to leverage my expertise to deliver exceptional results and drive business success."
 date: May 8 2021
-logo: Linkedin
+logo: Resume
 ---
